--- a/package.json
+++ b/package.json
@@ -1,9 +1,15 @@
 {
   "dependencies": {
     "express": "^4.19.2"
-    
-
-  }
+  },
+  "name": "iesb_construcao_backend-main",
+  "description": "TESTANDO ALTERAÇÕES",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
-
-
